--- a/styles.css
+++ b/styles.css
@@ -264,14 +264,14 @@
 }
 
 .ring.active {
-  transform: translateY(0%) translateX(350%) scale(1.6);
+  transform: translateY(-50%) translateX(325%) scale(1.6);
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.15);
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
 }
 
 .ring.left {
-  transform: translateY(50%) translateX(-50%) translateZ(-100px) scale(0.5);
+  transform: translateY(50%) translateX(-50%) translateZ(-100px) scale(1);
   opacity: 0.7;
 }
 
@@ -284,7 +284,7 @@
 }
 
 .ring.right {
-  transform: translateY(50%) translateX(700%) translateZ(-100px) scale(0.5);
+  transform: translateY(50%) translateX(700%) translateZ(-100px) scale(1);
   opacity: 0.7;
 }
 
@@ -294,6 +294,10 @@
 
 .ring.right .ring-des {
   opacity: 0;
+}
+
+.ring-off {
+  font-size: 12px;
 }
 
 /* Media Query for max-width: 768px */
@@ -308,12 +312,12 @@
   }
 
   .ring.left {
-    transform: translateY(65%) translateX(-50%) translateZ(-100px) scale(0.7);
+    transform: translateY(65%) translateX(-50%) translateZ(-100px) scale(0.9);
     opacity: 0.7;
   }
 
   .ring.right {
-    transform: translateY(75%) translateX(600%) translateZ(-225px) scale(0.7);
+    transform: translateY(75%) translateX(600%) translateZ(-225px) scale(0.9);
     opacity: 0.7;
   }
 }
@@ -331,12 +335,12 @@
   }
 
   .ring.left {
-    transform: translateY(20%) translateX(-50%) translateZ(-100px) scale(0.7);
+    transform: translateY(20%) translateX(-50%) translateZ(-100px) scale(0.8);
     opacity: 0.7;
   }
 
   .ring.right {
-    transform: translateY(40%) translateX(475%) translateZ(-225px) scale(0.7);
+    transform: translateY(40%) translateX(475%) translateZ(-225px) scale(0.8);
     opacity: 0.7;
   }
 }
