--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@
 
   .hero-section {
     /* position: relative; */
-    height: 100vh;
+    height: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -295,6 +295,15 @@
 .ring.right .ring-des {
   opacity: 0;
 }
+.ring-des h1{
+  font-size: 1rem;
+}
+.ring-des :nth-child(3){
+  font-size: 12px;
+}
+.ring-des button{
+  font-size: 12px;
+}
 
 .ring-off {
   font-size: 12px;
@@ -303,7 +312,7 @@
 /* Media Query for max-width: 768px */
 @media (max-width: 1400px) {
   .ring.active {
-    transform: translateY(-10%) translateX(275%) scale(1.4);
+    transform: translateY(-70%) translateX(275%) scale(1.3);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -321,12 +330,8 @@
 }
 
 @media (max-width: 1200px) {
-  .hero-section {
-    height: 50vh;
-  }
-
   .ring.active {
-    transform: translateY(0%) translateX(210%) scale(1.4);
+    transform: translateY(-50%) translateX(210%) scale(1.3);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -344,8 +349,11 @@
 }
 
 @media (max-width: 1000px) {
+  .hero-section {
+    height: 50vh;
+  }
   .ring.active {
-    transform: translateY(10%) translateX(170%) scale(1.4);
+    transform: translateY(-50%) translateX(170%) scale(1.2);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -364,7 +372,7 @@
 
 @media (max-width: 900px) {
   .ring.active {
-    transform: translateY(40%) translateX(150%) scale(1.4);
+    transform: translateY(-40%) translateX(150%) scale(1.1);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -383,7 +391,7 @@
 
 @media (max-width: 768px) {
   .ring.active {
-    transform: translateY(20%) translateX(100%) scale(1.25);
+    transform: translateY(-60%) translateX(100%) scale(1);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -403,7 +411,7 @@
 /* Media Query for max-width: 576px (smaller screens) */
 @media (max-width: 677px) {
   .ring.active {
-    transform: translateY(0%) translateX(100%) scale(1.25);
+    transform: translateY(-50%) translateX(100%) scale(1);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -422,7 +430,7 @@
 
 @media (max-width: 576px) {
   .ring.active {
-    transform: translateY(-30%) translateX(100%) scale(1.1);
+    transform: translateY(-70%) translateX(100%) scale(1);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -454,6 +462,35 @@
 
   .ring.right {
     transform: translateY(-50%) translateX(150%) translateZ(-100px) scale(0.6);
+    opacity: 0.7;
+  }
+}
+
+.ring-font {
+  font-size: 5rem;
+  opacity: 0.1;
+  min-width: 1000px;
+  text-align: center;
+}
+
+.ring-des {
+  min-width: 600px;
+}
+@media (max-width: 400px) {
+  .ring.active {
+    transform: translateY(-50%) translateX(50%) scale(0.9);
+    z-index: 10;
+    background-color: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
+  }
+
+  .ring.left {
+    transform: translateY(-50%) translateX(-35%) translateZ(-100px) scale(0.6);
+    opacity: 0.7;
+  }
+
+  .ring.right {
+    transform: translateY(-50%) translateX(140%) translateZ(-100px) scale(0.6);
     opacity: 0.7;
   }
 }
